overlaping bug in login page is fixed

--- a/styles.css/main.css
+++ b/styles.css/main.css
@@ -1,63 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-*{
+* {
     font-family: Outfit;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.full-screen{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+
+.full-screen {
+
+
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     z-index: -1;
 }
-.window{
-    
-    margin: 0 550px;
-    margin-top: 250px;
-    padding-bottom: 70px;
-    background: rgba(255, 255, 255, 0.04);
+
+.container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.window {
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
+    padding-right: 320px;
+    padding-left: 20px;
+    background: linear-gradient(to bottom, black 33%, white 33%);
     border-radius: 10px;
     border: 2px solid black;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+    ;
+
 }
-.sign{
-    display: flex;
+
+.sign {
+    vertical-align: middle;
+    margin: 60px 115px;
+    margin-top: 100px;
+    width: 200px;
     color: white;
-    justify-content: center;
-    margin: 60px 60px;
+    padding: 10px 0px;
 }
-.sign h1{
-    margin-top: 30px;
-}
-.details{
+
+.details {
+
     width: 70%;
-    margin-left: 65px;
+    margin-left: 10%;
+    margin-right: 10%;
     padding-left: 20px;
-    padding-right: 20px;
     padding-bottom: 20px;
 }
-.user-class{
-    margin-top:1px;
-    position: relative;
-    display: inline-block;
+
+.form-details {
+    padding: 0 10px;
 }
-.user-class ::placeholder{
+
+.user-class {
+    margin-top: 1px;
+    position: relative;
+    display: block;
+}
+
+.user-class ::placeholder {
     font-size: 19px;
 }
-.lock{
+
+.lock {
     margin-top: 30px;
     position: relative;
-    display: inline-block;
+    display: block;
 }
-.lock ::placeholder{
+
+.lock ::placeholder {
     font-size: 19px;
 }
-#user{
+
+#user {
     margin-left: -15px;
     padding-left: 20px;
     padding-right: 16px;
@@ -67,13 +94,16 @@
     border-radius: 25px;
     text-align: start;
     font-size: 18px;
+
 }
-#user:focus{
-    outline:auto;
+
+#user:focus {
+    outline: auto;
     box-shadow: none;
     border: auto;
 }
-#pass{
+
+#pass {
     margin-left: -15px;
     padding-left: 20px;
     padding-right: 16px;
@@ -83,32 +113,37 @@
     border-radius: 25px;
     font-size: 18px;
 }
-#pass:focus{
+
+#pass:focus {
     outline: auto;
     box-shadow: none;
     border: auto;
 }
+
 .user-class img {
-  position: absolute;
-  left: 220px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  pointer-events: none;
-  border-radius: 20px;
+    position: absolute;
+    left: 220px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    pointer-events: none;
+    border-radius: 20px;
 }
+
 .lock img {
-  position: absolute;
-  left: 220px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 30px;
-  height: 30px;
-  pointer-events: none;
-  border-radius: 20px;
+    position: absolute;
+    left: 220px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    pointer-events: none;
+    border-radius: 20px;
 }
-.submit-btn{
+
+.submit-btn {
+    display: block;
     margin-top: 80px;
     margin-left: 70px;
     border: none;
@@ -122,11 +157,13 @@
     border: 2px solid black;
     transition: background-color 0.2s, color 0.2s, border 0.2s, background-color 0.15;
 }
-.submit-btn:hover{
+
+.submit-btn:hover {
     background-color: black;
     color: white;
     border: 2px solid white;
 }
-.submit-btn:active{
+
+.submit-btn:active {
     background-color: rgb(53, 50, 50);
 }
