--- a/styles.css/nav.css
+++ b/styles.css/nav.css
@@ -26,6 +26,7 @@
 }
 body{
     background-color: rgb(221, 221, 221);
+    overflow-x: hidden;
 }
 .icons{
     display: flex;
